using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DesignPattern.策略模式.商场计费工具
{
    internal class Commodity
    {
        public string Name { get; set; }
        public decimal Price { get; set; }
    }
}
